--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,24 @@ body {
 a {
   display: none !important;
 }
+
+input[type="number"] {
+  -webkit-appearance: none;
+  -moz-appearance: textfield;
+  appearance: textfield;
+  margin: 0;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"]::-ms-clear {
+  display: none;
+}
+
+input[type="number"]::-ms-reveal {
+  display: none;
+}
