--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,7 @@ body {
   scrollbar-color: white transparent;
 }
 
-.fr-box.fr-basic .fr-wrapper{
+/* .fr-box.fr-basic .fr-wrapper{
   border-bottom-color: #ccc !important;
   border-bottom-left-radius: 10px !important;
   border-bottom-right-radius: 10px !important;
@@ -36,7 +36,7 @@ body {
 
 a {
   display: none !important;
-}
+} */
 
 input[type="number"] {
   -webkit-appearance: none;
